refactor: change style of add elements

--- a/templates/Admin/profil_down/card/card.html.twig
+++ b/templates/Admin/profil_down/card/card.html.twig
@@ -5,7 +5,7 @@
     <div class="drop-shadow-lg">
         <nav class="profil_menu overflow-y-hidden overflow-x-auto h-[50px] flex items-end">
             <ul>
-                <li class="text-primary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'entrées' })}}" class="hover:-translate-y-1 bg-500/60 duration-100 rounded-t-3xl">Entrées</a></li>
+                <li class="text-secondary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'entrées' })}}" class="hover:-translate-y-1 bg-500/60 duration-100 rounded-t-3xl">Entrées</a></li>
                 <li class="text-secondary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'plats' })}}" class="hover:-translate-y-1 bg-primary/50 duration-100 rounded-t-3xl">Plats</a></li>
                 <li class="text-secondary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'desserts' })}}" class="hover:-translate-y-1 bg-600 duration-100 rounded-t-3xl">Desserts</a></li>
                 <li class="text-secondary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'menus' })}}" class="hover:-translate-y-1 bg-500 duration-100 rounded-t-3xl">Menus</a></li>
