--- a/templates/Admin/profil_down/carousel.html.twig
+++ b/templates/Admin/profil_down/carousel.html.twig
@@ -3,7 +3,7 @@
         <section class="after py-6 relative">
             <p class="w-11/12 mx-auto max-w-[598px] pb-3 underline underline-offset-2">Ajouter une photo :</p>
             {{ form_start(form_image, { 'attr' : { 'class' :'w-11/12 mx-auto max-w-[598px]'}})}}
-            <div class="lg:flex lg:justify-between">
+            <div class="">
                 <div class="pb-2 relative">
                     <div class="hidden">{{ form_label(form_image.image) }}</div>
                     {{ form_widget(form_image.image, { 'attr' : { 'class' : 'w-full pr-2' }}) }}
@@ -11,13 +11,13 @@
                         {{ form_errors(form_image.image) }}
                     </small>
                 </div>
-                <div class="flex gap-2 lg:w-1/2 relative">
+                <div class="flex gap-2 relative">
                     <div class="hidden">{{ form_label(form_image.title) }}</div>
                     {{ form_widget(form_image.title, { 'attr' : { 'class' : 'input_carousel input_withoutIcon input_white'}} )}}
                     <small class="form_error absolute w-11/12 mx-auto -bottom-4 lg:-bottom-3">
                         {{ form_errors(form_image.title) }}
                     </small>
-                    <button type="submit" id="add_image" class="input_carousel button_profil"><i class="fa-solid fa-plus"></i></button>
+                    <button type="submit" id="add_image" class="min-w-[2rem] sm-600:min-w-fit  h-8 px-2 flex gap-2 items-center bg-secondary text-primary hover:bg-primary hover:text-secondary whitespace-nowrap duration-150"><p class="hidden sm-700:block">Ajouter une image</p><i class="fa-solid fa-plus"></i></button>
                 </div>
             </div>
             <div class="relative pt-2">
@@ -40,7 +40,7 @@
                                 <input type="text" minLength=2 maxlength=50 id="{{ 'title_'~ image.id }}" name="{{ 'title_'~ image.id }}" required value="{{ image.title }}" class="input_carousel input_withoutIcon flex-1">
                                 <button aria-label="Modifier" type="submit" id="{{ 'set_title_'~ image.id }}" class="input_carousel button_profil"><i class="fa-solid fa-pen"></i></button>
                             </form>
-                            <button aria-label = 'Supprimer' onClick="deleteImage(event)" id="{{ 'delete_'~ image.id }}" class="input_carousel button_profil"><i class="fa-solid fa-trash h-full button-full"></i></button>
+                            <button aria-label = 'Supprimer' onClick="deleteImage(event)" id="{{ 'delete_'~ image.id }}" class="bg-red-600 hover:bg-secondary hover:text-red-600 button_profil"><i class="fa-solid fa-trash h-full button-full"></i></button>
                         </div>
                         <form method="POST" onSubmit ="setDescription(event)" class="flex gap-2 justify-center">
                             <label hidden for="{{ 'description'~ image.id}}">Description</label>
