--- a/templates/Admin/profil_up/restaurant.html.twig
+++ b/templates/Admin/profil_up/restaurant.html.twig
@@ -11,7 +11,7 @@
         <form method="POST" class="form_profil">
             <label for="emailRestaurant" class="hidden md:block">Email :</label>
             <div class="form_inputContainer input_profil">
-                <i class="fa-solid fa-phone form_icon"></i>
+                <i class="fa-solid fa-at form_icon"></i>
                 <input class="input_whitePlaceholder" type="email" name="emailRestaurant" id="emailRestaurant" required placeholder="{{ restaurant.email }}" minlength=5 maxlength=50>
                 <button type="submit" id="change_email" class="form_icon" ><i class="fa-solid fa-pen"></i></button>
             </div>
