--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -489,10 +489,18 @@ header nav a.active::after {
 #schedules input[type=time]::-webkit-calendar-picker-indicator, #special_dates input[type=time]::-webkit-calendar-picker-indicator, #special_dates input[type=date]::-webkit-calendar-picker-indicator  {
     filter: invert(100%);
 }
-/* DATES */
+/* CLIENT */
+/* Allergies */
+.form_allergies {
+    grid-template-columns: repeat(2, 13px 1fr);
+}
 
 
-
+@media screen and (max-width:359px) {
+    .form_allergies {
+        grid-template-columns:  13px 1fr;
+    }
+}
 @media screen and (min-width: 420px) {
     #schedules input[type=time], #special_dates input[type=time] {
         padding: 0 4px;
@@ -503,6 +511,11 @@ header nav a.active::after {
     , #all_special_dates .fa-lock-open, #all_special_dates .fa-lock {
         padding-inline-start: 0px;
         display: none !important;
+    }
+}
+@media screen and (min-width: 590px) {
+    .form_allergies {
+        grid-template-columns: repeat(3, 13px 1fr);
     }
 }
 @media screen and (min-width: 768px) {
