--- a/templates/Client/profil.html.twig
+++ b/templates/Client/profil.html.twig
@@ -19,59 +19,73 @@
             </nav>
             <div class="text-secondary bg-500 profil_up drop-shadow-lg">
                 <div class="grid py-4 gap-2 drop-shadow-lg">
-        <form class="form_profil" method="POST">
-            <label for="email" class="hidden md:block">Email :</label>
-            <div class="form_inputContainer input_profil">
-                <i class="fa-solid fa-at form_icon"></i>
-                <input class="input_whitePlaceholder" type="email" name="email" id="email" placeholder={{ app.user.email }} required minlength=5 maxlength=80 value={{ last_email }}>
-                <button type="submit" id="change_email" class="form_icon" ><i class="fa-solid fa-pen"></i></button>
-            </div>
-        </form>
-        <form class="form_profil gap-y-2 items-center" method="POST">
-            <label for="password" class="hidden md:block">Mot de passe :</label>
-            <div class="form_inputContainer input_profil relative">
-                <i class="fa-solid fa-lock form_icon"></i>
-                <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="password" id="password" placeholder="********" required pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" onfocus="displayRules()" onfocusout="removeRules()" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
-                <span role="button" onclick="togglePassword(event)">
-                    <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
-                    <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
-                </span>
-                <button type="submit" id="change_password" class="form_icon" ><i class="fa-solid fa-pen"></i></button>
-                <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_password"></small>
-                <small class="absolute w-11/12 mx-auto top-full hide" id="password_rule">Doit contenir au moins 8 caractères, une minuscule, une majuscule et un chiffre.</small>
-                <small class="absolute w-11/12 mx-auto top-full hide" id="need_password">
-                    Veuillez insérer votre mot de passe puis validez à nouveau.<br>
-                    <a href={{ path('app_forgot_password_request') }} class="hover:underline duration-75 underline-offset-2" id="forgot_password">Mot de passe oublié ?</a>
-                </small>
-            </div>
-            <label for="valid_password" class="hide change_password hidden_label">Valider le mot de passe :</label>
-            <div class="hide form_inputContainer input_profil hide change_password relative">
-                <i class="fa-solid fa-lock form_icon"></i>
-                <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="valid_password" id="valid_password" placeholder="Nouveau mot de passe" pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre." required>
-                <span role="button" onclick="togglePassword(event)">
-                    <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
-                    <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
-                </span>
-                <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_validPassword"></small>
-            </div>
-            <label for="old_password" class="hide change_password hidden_label">Ancien mot de passe :</label>
-            <div class="hide form_inputContainer input_profil hide change_password relative">
-                <i class="fa-solid fa-lock form_icon"></i>
-                <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="old_password" id="old_password" placeholder="Ancien mot de passe" pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" required title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
-                <span role="button" onclick="togglePassword(event)">
-                    <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
-                    <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
-                </span>
-                <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_oldPassword"></small>
-                <small class="absolute -bottom-9"><a href={{ path('app_forgot_password_request') }} class="hover:underline duration-75 underline-offset-2" id="forgot_password">Mot de passe oublié ?</a></small>
-            </div>
-        </form>
-    </div>
+                    <form class="form_profil" method="POST">
+                        <label for="email" class="hidden md:block">Email :</label>
+                        <div class="form_inputContainer input_profil">
+                            <i class="fa-solid fa-at form_icon"></i>
+                            <input class="input_whitePlaceholder" type="email" name="email" id="email" placeholder={{ app.user.email }} required minlength=5 maxlength=80 value={{ last_email }}>
+                            <button type="submit" id="change_email" class="form_icon" ><i class="fa-solid fa-pen"></i></button>
+                        </div>
+                    </form>
+                    <form class="form_profil gap-y-2 items-center" method="POST">
+                        <label for="password" class="hidden md:block">Mot de passe :</label>
+                        <div class="form_inputContainer input_profil relative">
+                            <i class="fa-solid fa-lock form_icon"></i>
+                            <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="password" id="password" placeholder="********" required pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" onfocus="displayRules()" onfocusout="removeRules()" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
+                            <span role="button" onclick="togglePassword(event)">
+                                <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
+                                <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
+                            </span>
+                            <button type="submit" id="change_password" class="form_icon" ><i class="fa-solid fa-pen"></i></button>
+                            <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_password"></small>
+                            <small class="absolute w-11/12 mx-auto top-full hide" id="password_rule">Doit contenir au moins 8 caractères, une minuscule, une majuscule et un chiffre.</small>
+                            <small class="absolute w-11/12 mx-auto top-full hide" id="need_password">
+                                Veuillez insérer votre mot de passe puis validez à nouveau.<br>
+                                <a href={{ path('app_forgot_password_request') }} class="hover:underline duration-75 underline-offset-2" id="forgot_password">Mot de passe oublié ?</a>
+                            </small>
+                        </div>
+                        <label for="valid_password" class="hide change_password hidden_label">Valider le mot de passe :</label>
+                        <div class="hide form_inputContainer input_profil hide change_password relative">
+                            <i class="fa-solid fa-lock form_icon"></i>
+                            <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="valid_password" id="valid_password" placeholder="Nouveau mot de passe" pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre." required>
+                            <span role="button" onclick="togglePassword(event)">
+                                <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
+                                <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
+                            </span>
+                            <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_validPassword"></small>
+                        </div>
+                        <label for="old_password" class="hide change_password hidden_label">Ancien mot de passe :</label>
+                        <div class="hide form_inputContainer input_profil hide change_password relative">
+                            <i class="fa-solid fa-lock form_icon"></i>
+                            <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="old_password" id="old_password" placeholder="Ancien mot de passe" pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" required title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
+                            <span role="button" onclick="togglePassword(event)">
+                                <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
+                                <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
+                            </span>
+                            <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_oldPassword"></small>
+                            <small class="absolute -bottom-9"><a href={{ path('app_forgot_password_request') }} class="hover:underline duration-75 underline-offset-2" id="forgot_password">Mot de passe oublié ?</a></small>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
+        <section class="relative -top-[50px] z-20">
+            <nav class="profil_menu overflow-y-hidden overflow-x-auto h-[50px] flex items-end">
+                <ul>
+                    <li class="text-secondary bg-500"><a href="{{ path('client_profil', {'page_down' : 'modèles' }) }}" class="hover:-translate-y-1 bg-600 duration-100 rounded-t-3xl" >Modèles</a></li>
+                    <li class="text-primary bg-500"><a href="{{ path('client_profil', { 'page_down' : 'réservations' }) }}" class="hover:-translate-y-1 bg-400 duration-100 rounded-t-3xl">Réservations</a></li>
+                </ul>
+            </nav>
+            {% block profil_down %}
+                {% if page_down == 'modèles' %}
+                    {% include 'Client/profil_down/sheets.html.twig' %}
+                {% else %}
+                    {% include 'Client/profil_down/reservations.html.twig' %}
+                {% endif %}
+            {% endblock %}
+        </section>
     </div>
-
-
+    <button id='button-up' class="hide slow-opacity-reverse sticky z-30 bottom-12 h-9 w-9 md:h-14 md:w-14 left-[80%] bg-secondary text-primary rounded-full drop-shadow-lg hover:bg-400 duration-150 group"><i class="fa-solid fa-arrow-up button-full md:text-xl group-hover:text-secondary duration-150"></i></button>
 </main>
 {% endblock %}
 {% block scripts %}
