--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
                                 {% if 'ROLE_ADMIN' in app.user.roles %}
                                     <li><a class="" href="{{ url('admin_profil', {'page_up':'informations', 'page_down' : 'carousel'}) }}">Profil</a></li>
                                 {% else %}
-                                    <li><a class="" href="{{ url('client_profil', {'page_down' : 'fiches' }) }}">Profil</a></li>
+                                    <li><a class="" href="{{ url('client_profil', {'page_down' : 'modèles' }) }}">Profil</a></li>
                                 {% endif %}
                         <li><a href={{ path('logout') }}>Deconnexion</a></li>
                         {% else %}
