--- a/templates/Client/profil_down/templates.html.twig
+++ b/templates/Client/profil_down/templates.html.twig
@@ -71,8 +71,8 @@
 										<button type="submit" class="bg-primary/50 h-8 px-2 bg-secondary text-primary duration-150 hover:bg-primary hover:text-secondary" aria-label="Modifier">
 											Modifier
 										</button>
-										<button aria-label="Supprimer" date-index="{{ template.id }}" onclick="deleteTemplate(event)" class="bg-red-600 hover:bg-secondary hover:text-red-600 duration-150">
-											<i class="fa-solid fa-trash button_profil button-full"></i>
+										<button aria-label="Supprimer" class="bg-red-600 hover:bg-secondary hover:text-red-600 duration-150">
+											<i data-id="{{ template.id }}" onclick="deleteTemplate(event)" class="fa-solid fa-trash button_profil button-full"></i>
 										</button>
 									</div>
 								</div>
