--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
                     <ul class="md.5:inline-flex md.5:gap-6 lg:gap-12 text-secondary font-secondary relative top-[57px] xl:text-lg">
                         <li><a href={{ path('home') }} class="active">Accueil</a></li>
                         <li><a href={{ path('card') }}>Carte</a></li>
-                        <li><a href="">Réserver</a></li>
+                        <li><a href={{ path('reservation') }}>Réserver</a></li>
                         <li><a href={{ path('contact') }}>Contact</a></li>
                         {% if app.user %}
                                 {% if 'ROLE_ADMIN' in app.user.roles %}
@@ -43,7 +43,7 @@
         {% endblock %}
         {% block body %}{% endblock %}
         {% block footer %}
-            <footer class="bg-500 text-secondary font-third py-4 px-5 mt-8 w-full md:flex md:justify-center text-sm">
+            <footer class="bg-500 text-secondary font-third py-4 px-5 w-full md:flex md:justify-center text-sm">
                 <div class="grid max-w-[440px] mx-auto md:w-fit md:max-w-[340px] md:min-w-[300px] md:mx-0 lg:w-[400px]">
                     <p class="footer_title">Horaires</p>
                     <ul class = "scedules text-xs">
